# bar

./: Dockerfile  db.sqlite3  pyproject.toml  run.sh
advocates/: admin.py  models.py  urls.py  views.py
advocates/migrations/: 0001_initial.py  0002_remove_advocate_practice_area_and_more.py  0003_role_advocaterole.py  0004_advocaterole_session.py  0005_advocate_aibe_number.py  0006_alter_advocate_aibe_number_alter_advocate_city_and_more.py  0007_alter_advocate_practicing_since.py
advocates/templates/: list_advocates.html
bar/: asgi.py  settings.py  urls.py  wsgi.py
complaints/: models.py  urls.py  views.py
complaints/migrations/: 0001_initial.py
contact/: admin.py  models.py  urls.py  views.py
contact/migrations/: 0001_initial.py
contact/templates/: complaint.html  contact_us.html
dashboard/: models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py
dashboard/templates/: base.html  dashboard.html
notice/: admin.py  models.py  urls.py  views.py
notice/migrations/: 0001_initial.py  0002_alter_notice_content.py  0003_notice_is_active.py
notice/templates/: list_notices.html
officer/: admin.py  models.py
officer/migrations/: 0001_initial.py
reports/: admin.py  models.py  urls.py  views.py
reports/migrations/: 0001_initial.py  0002_alter_category_options_alter_expense_description_and_more.py  0003_incomecategory_rename_category_expensecategory_and_more.py  0004_alter_incomecategory_options.py
reports/templates/: reports.html
services/: models.py  urls.py  views.py
services/migrations/: 0001_initial.py  0002_service_logo.py  (+1 more)
(+4 files in other folders)
